[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plain-abc"
version = "0.0.2"
authors = [
    { name="Chielo Newctle", email="ChieloNewctle@Yandex.com" },
]
description = "An ABC implementation without metaclass"
readme = "README.md"
requires-python = ">=3.7"
license-files = { paths = ["LICENSE"] }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "importlib_metadata >= 1.0; python_version < '3.8'",
]

[tool.hatch.build]
sources = ["src"]

[project.urls]
"Homepage" = "https://github.com/ChieloNewctle/plain-abc"
"Bug Tracker" = "https://github.com/ChieloNewctle/plain-abc/issues"

[project.optional-dependencies]
tests = [
    "pytest",
]
