[project]
name = "plain-abc"
version = "0.0.4"
authors = [{ name = "Chielo Newctle", email = "ChieloNewctle@Yandex.com" }]
description = "An ABC implementation without metaclass"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ChieloNewctle/plain-abc"
"Bug Tracker" = "https://github.com/ChieloNewctle/plain-abc/issues"

[project.optional-dependencies]
tests = ["pytest"]
